Fixed CSS layout bug
Was struggling to keep it all in one 100vh container. There was always overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .portalLayout {
     display: flex;
     flex-direction: row;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .sidebarDiv {
@@ -14,7 +14,7 @@
     background-color: var(--content-background-colour);
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 0;
 }
 
 .imageContainer {
@@ -29,7 +29,8 @@
 }
 
 .contentArea {
-    height: 100%;
     background-color: var(--content-background-colour);
     padding: var(--500-spacing) var(--1000-spacing);
+    flex: 1;
+    min-height: 0;
 }
