--- a/src/CSS/DropdownFilter.css
+++ b/src/CSS/DropdownFilter.css
@@ -63,3 +63,18 @@
 .active {
     background-color: var(--positive-background-colour);
 }
+
+.titleFilter {
+    width: 100%;
+    background: green;
+    border-radius: 5px 5px 0 0;
+    display: flex;
+    flex-direction: row;
+    padding: 10px 20px;
+    align-items: center;
+    color: white;
+}
+
+.titleFilter .dropdownIcon {
+    color: white;
+}
