--- a/src/CSS/FeedbackReportPage.css
+++ b/src/CSS/FeedbackReportPage.css
@@ -1,6 +1,7 @@
 .reportPageSection {
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 .dataFeedbackSection {
@@ -8,8 +9,9 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     column-gap: 10px;
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-rows: repeat(12, minmax(0, 1fr));
     row-gap: 10px;
+    min-height: 0;
 }
 
 .topLeft {
@@ -45,12 +47,6 @@
     font-size: 16px;
 }
 
-.dataContainerFeedback {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .graph {
     border: 15px solid green;
     height: 150px;
@@ -68,6 +64,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    padding: 10px 0;
 }
 
 .leaderboardItem {
@@ -103,4 +100,14 @@
 
 .medalIcon {
     color: gold;
+}
+
+/* NEW */
+
+
+.dataContainerFeedback {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
